--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <link rel="stylesheet" href="style.css">
-    <title>ENIGMA - Horizontal</title>
+    <title>ENIGMA</title>
 </head>
 <body>
     <main class="main-content">
         <section class="painel-esquerdo">
             <div class="rotores-container">
-                <label>Rotores:</label>
+                <label>Rotores (Posição Inicial):</label>
                 <div class="rotores">
                     <input type="number" id="posicaoRotor1" class="input-rotor" value="0" maxlength="2">
                     <input type="number" id="posicaoRotor2" class="input-rotor" value="0" maxlength="2">
@@ -33,9 +33,11 @@
         </section>
 
         <section class="painel-direito">
-            <div class="circle-container" id="circle">
-                <svg id="svg-linhas" width="100%" height="100%" style="position:absolute; top:0; left:0; z-index:0;"></svg>
-                </div>
+            <div class="circle-wrapper"> 
+                <div class="circle-container" id="circle">
+                    <svg id="svg-linhas" width="100%" height="100%" style="position:absolute; top:0; left:0; z-index:0;"></svg>
+                    </div>
+            </div>
         </section>
     </main>
     
